# TC-DNA

./: .gitignore  main.py  pyproject.toml
config/: tasks.json  ui_config.json
resource/script/: task_template copy.py  test.py
ui/: __init__.py  compatibility.py  main_interface.py  settings_window.py
ui/components/: log_widget.py  ui_elements.py
user_data/: settings.json
utils/: __init__.py  admin.py  config_manager.py  global_manager.py
utils/image/: __init__.py  image_manager.py  ocr_recognition.py  template_matching.py  window_capture.py
utils/input/: __init__.py  input_manager.py  keyboard.py  mouse.py  window_message.py
utils/task/: __init__.py  task_manager.py  task_ui.py
utils/window/: __init__.py  window_manager.py
