[project]
name = "TC-DNA"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.2",
    "darkdetect>=0.8.0",
    "onnxruntime>=1.23.2",
    "opencv-python>=4.12.0.88",
    "packaging>=25.0",
    "psutil>=7.1.3",
    "pyinstaller>=6.16.0",
    "pynput>=1.8.1",
    "pywin32>=311",
    "rapidocr>=3.4.2",
    "scikit-image>=0.25.2",
]
